--- a/Documenting Components/02. Component Introductions.md
+++ b/Documenting Components/02. Component Introductions.md
@@ -1,4 +1,4 @@
-# ![1-jHHFLZzJtFjm6Sdz__Z-Ag](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-jHHFLZzJtFjm6Sdz__Z-Ag.png)
+![1](https://user-images.githubusercontent.com/14002721/90643556-65ad6900-e23c-11ea-9f3e-a4d3004d11a3.png)
 
 # Имена компонентов: "Меня зовут..."
 
@@ -6,22 +6,27 @@
 
 Имя компонента (Buttons) отображается в виде заголовка страницы, метки в навигации сайта (Buttons) и кодового идентификатора CSS-класса (-button) или HTML-элемента (<Button>). Кнопка это просто. Это название мы называем легко и последовательно, совместно, везде, где бы мы ни работали.
 
-![1-MmqCeJEHSb9OtvtVFL0FRQ](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-MmqCeJEHSb9OtvtVFL0FRQ.png)
+![2](https://user-images.githubusercontent.com/14002721/90643561-66de9600-e23c-11ea-98df-054e0deaf863.png)
+
 На протяжении всего проектирования, кода и обсуждения используется одно и то же название компонента.
 
 *Меню (Drawer)* или *Аккордеон (Accordion)* или *Cворачиваемая секция (Collapsible)* это сложно. Еще сложнее? *Сетка (Grid)* или *макет (Layout)* или *Макет сетки (Layout Grid)*, или *Строки (Rows)* и *Колонны (Columns)*, или *Коробка (Box)*, или *Пропорциональная сетка (Proportional Grid)*, или неважно как вы называете невидимые *Строительные леса (scaffolding)*, визуально упорядочивающие страницу. Даже *Карточка (Card)* не является универсальным определением: это общий контейнер или определенная композиция из всего, что она содержит? Создание библиотеки заставляет сделать выбор.
 
-![1-PBfKEaF5fOQkYFGeoiG-eQ](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-PBfKEaF5fOQkYFGeoiG-eQ.png)Название компонента, используемого для "Установки визуального порядка на странице с помощью строк и столбцов" в 21 библиотеке.
+![3](https://user-images.githubusercontent.com/14002721/90643563-67772c80-e23c-11ea-9b52-e3ac4d4be946.png)
+
+Название компонента, используемого для "Установки визуального порядка на странице с помощью строк и столбцов" в 21 библиотеке.
 
 Для большинства сайтов документаций, навигация полагается только на ярлыки. С небольшими усилиями, навигация может быть улучшена с помощью миниатюры, может быть, только через подсказку на наведении. Тот же самый снэпшот - или полностью отображенные компоненты - можно было бы также разместить в галерее, представляя раздел "Компоненты". Мы можем сделать больше.
 
-![1-KBZz5m8tI_edrg6rzW52cQ](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-KBZz5m8tI_edrg6rzW52cQ.png)
+![4](https://user-images.githubusercontent.com/14002721/90643566-680fc300-e23c-11ea-9dee-5af0d97d12ec.png)
 
 Если вы хотите внести ясность в свою библиотеку, добавьте компонентам немного «Также известен как», для большей понятности.
 
-![1-Vm-iuuddMZhcF2coyT5HMw](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-Vm-iuuddMZhcF2coyT5HMw.png)
+![5](https://user-images.githubusercontent.com/14002721/90643571-68a85980-e23c-11ea-8e76-ef9e9d00f431.png)
 
 *На заметку:* Оптимально ясное название может быть непростым, так что не стоит слишком сильно потеть, чтобы принять решение. Всегда подавайте в паре с наглядным примером и добавляйте подсказки в другие места пользовательского интерфейса.
+
+![dot-dot-dot](https://user-images.githubusercontent.com/14002721/90643585-6b0ab380-e23c-11ea-8cc8-7193b98be896.png)
 
 # Кнопка или Кнопки? Принятие решения: Единственное число против Множественного числа
 
@@ -29,13 +34,15 @@
 
 Для компонентов, многократно используемых на странице, будь то примитивные (Buttons, Inputs) или составные (Cards), промышленный образец предполагает, что большинство библиотек предпочитают множественное число для заголовков страниц и этикеток навигации по сайту.
 
-![1-Nc_XHdoOcMFM7C5rDr6KUw](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-Nc_XHdoOcMFM7C5rDr6KUw.png)
+![6](https://user-images.githubusercontent.com/14002721/90643572-68a85980-e23c-11ea-9700-8b8aca71277a.png)
 
 Однако, единственное число является общим для компонентов, используемых один раз на странице. Считается, что Global Navigation, Footer и Grids образуют каркас страницы (хотя Grids повторяются в пределах страницы). Аналогичным образом, Masthead, Hero или Billboard могут задавать тон страницы, но не повторяются далее. Когда мы их вербализируем, то единственное число звучит более естественно.
 
 Навигация - это хитро. Как обозначение компонента, оно наиболее расплывчатое, так что подумайте о том, чтобы вообще его избегать. Но для остальных примеров множественное число - Footers, Grids и Mastheads — работает просто отлично.
 
 *На заметку:* Большинство команд предпочитают множественное число, и именно от вашей команды зависит формирование конвенции. Идеальная согласованность может не стоить того, чтобы возбуждать страсти в команде, но если вы смешиваете и то, и другое, то имейте основания для этого.
+
+![dot-dot-dot](https://user-images.githubusercontent.com/14002721/90643585-6b0ab380-e23c-11ea-8cc8-7193b98be896.png)
 
 # Вступление к компоненту: "...и что я делаю это..."
 
@@ -53,7 +60,7 @@
 
 Как типографская традиция, описание, известное как «Оснастка (Deck)», должно быть визуально сопряжено с названием компонента и отделено от остального содержимого. Размер шрифта оснастки (deck) должен быть заметно больше, чем абзацы, которые следуют далее. 
 
-![81925812-aa948480-95e9-11ea-86e1-190f36386a70](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/81925812-aa948480-95e9-11ea-86e1-190f36386a70.png)
+![dot-dot-dot](https://user-images.githubusercontent.com/14002721/90643585-6b0ab380-e23c-11ea-8cc8-7193b98be896.png)
 
 ### Keep the Deck to a Tweet
 
@@ -61,11 +68,11 @@
 
 Я призываю членов команды принять "длину твиттера" (а под "твиттом" я подразумеваю оригинальную длину в 144 символа). Подойдут ли два предложения? Возможно, хотя моя история рецензирования забита предложениями по обрезке от двух предложений до одного.
 
-![1-goJLrlggOTckGuu8YswhCQ](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-goJLrlggOTckGuu8YswhCQ.png)
+![7](https://user-images.githubusercontent.com/14002721/90643575-6940f000-e23c-11ea-86e3-be389a59c00c.png)
 
 Держите оснастку (deck) короткой. 
 
-![1-BCaXP2pbvH5CdmAx-xTXew](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-BCaXP2pbvH5CdmAx-xTXew.png)
+![8](https://user-images.githubusercontent.com/14002721/90643579-6940f000-e23c-11ea-8c48-85efeb9d7a80.png)
 
 Не объясняйте все. Примеры сделают эту работу лучше.
 
@@ -74,6 +81,8 @@
 При написании вступления уловите суть, а не всю историю. Это означает уточнение структуры и цели компонентов, а не детали реализации. Для Grid: «rows and columns», вместо «12 columns или breakpoints at 768 and 1024», лучше «responsive layout». Для кнопок, держите описания очень короткими. 10 слов или даже меньше.Все знают, что такое кнопка.
 
 *На заметку:* Установите необходимый контекст и тон, избегайте упаковки каждой функции, и прежде всего: держите тон и контекст коротким.
+
+![dot-dot-dot](https://user-images.githubusercontent.com/14002721/90643585-6b0ab380-e23c-11ea-8cc8-7193b98be896.png)
 
 ### Отраслевые примеры для вдохновения
 
@@ -101,7 +110,7 @@
 
 > Компонент Box обеспечивает простой способ применения стандартизированного размера и пространства в Вашей планировке. (Mineral)
 
-![81925812-aa948480-95e9-11ea-86e1-190f36386a70](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/81925812-aa948480-95e9-11ea-86e1-190f36386a70.png)
+![dot-dot-dot](https://user-images.githubusercontent.com/14002721/90643585-6b0ab380-e23c-11ea-8cc8-7193b98be896.png)
 
 # Слишком детальное вступление? "Доберитесь до сути!"
 
@@ -113,15 +122,13 @@
 
 Итак, инстинкттивно хочется представить все в деталях. Вводный абзац становится разделом. Примеры кода, для объяснения каждого концепта, будут зеркально отображены в подзаголовках введения. Повторяя лишнее, затягивая читателя в детали еще до того, как он приступит к работе.
 
-![1-L9_xhGqnCQIK_AFED512yg](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-L9_xhGqnCQIK_AFED512yg.png)
+![9](https://user-images.githubusercontent.com/14002721/90643580-69d98680-e23c-11ea-9eef-26a46e4c3ad5.png)
 
 Расположите название компонента как заголовок страницы рядом с наглядным примером. 
 
-![1-FGgI4xeM6cXQ-vOtVoF_cw](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/1-FGgI4xeM6cXQ-vOtVoF_cw.png)
+![10](https://user-images.githubusercontent.com/14002721/90643582-6a721d00-e23c-11ea-850d-f12c078fc349.png)
 
 Не отделяйте название от изображения с длинным контекстом.
-
-
 
 Распознавание компонентов зависит от того, что читатель видит (картинка), а не читает (имя), даже если вспоминание и обсуждение зависят от имени. Поэтому позиционируйте название как название страницы близко к изображению элемента. Тестирование юзабилити документации подтверждает:
 
@@ -134,6 +141,6 @@
 
 *На заметку:* Избавьтесь от кровавых подробностей. Вместо этого, покажите примеры которые можно немедленно применить! Если у вас есть длинная история, которую вы хотите рассказать, сохраните ее на потом.
 
-![81925812-aa948480-95e9-11ea-86e1-190f36386a70](/Users/bodybag/Documents/GitHub/Public-Translations /medium/Documenting Components/02. Component Introductions/81925812-aa948480-95e9-11ea-86e1-190f36386a70.png)
+![dot-dot-dot](https://user-images.githubusercontent.com/14002721/90643585-6b0ab380-e23c-11ea-8cc8-7193b98be896.png)
 
 Введение компонентов должно быть мощным и в то же время коротким. Цель состоит в том, чтобы завлечь настолько, чтобы читатель оказался в нужном месте. В результате, необходимо свести к минимуму расстояние от названия компонента до первого взгляда на последующую «суть». Приведите читателя к примерам, которые можно использовать.
